--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div  class="card" >
         <div class="search">
-    <input type="text" class="inputBox" placeholder="enter the city name">
+    <input type="text" class="inputBox" placeholder="Enter the city name">
     <button class="SearchBtn"><img src="images/search.png" alt="">
     </div>
     <div class="error">Invalid City Name</div>
