--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="weather">
         <img src="images/clear.png" class="weatherIcon">
         <h1 class="temp">22°C</h1>
-        <h2 class="city">Bengaluru</h2>
+        <h2 class="city">Hyderabad</h2>
         <dev class="details">
             <div class="col">
                 <div>
